hydroflow/tests/compile-fail/surface_demux_port_missing.stderr
error: `demux(..)` closure argument `c` missing corresponding output port.
 --> tests/compile-fail/surface_demux_port_missing.rs:6:63
  |
6 |         my_demux = recv_iter(0..10) -> demux(|item, tl!(a, b, c)| {
  |                                                               ^

warning: unused import: `hydroflow::pusherator::Pusherator`
 --> tests/compile-fail/surface_demux_port_missing.rs:1:5
  |
1 | use hydroflow::pusherator::Pusherator;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `tl`
 --> tests/compile-fail/surface_demux_port_missing.rs:2:35
  |
2 | use hydroflow::{hydroflow_syntax, tl};
  |                                   ^^
